--- a/src/app/pages/empresa/empresa-form/empresa-form.component.html
+++ b/src/app/pages/empresa/empresa-form/empresa-form.component.html
@@ -27,7 +27,7 @@
                         <label for="posto" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
                             Posto Administrativo
                         </label>
-                        <p-select formControlName="postoAdministrativo" inputId="posto" [options]="postos"
+                        <p-select formControlName="posto" inputId="posto" [options]="postos"
                             optionLabel="name" fluid [showClear]="true" placeholder="Selecione o Posto">
                         </p-select>
                     </div>
