--- a/src/app/pages/licencas-certificados/certificados-lista/certificados-lista.component.html
+++ b/src/app/pages/licencas-certificados/certificados-lista/certificados-lista.component.html
@@ -40,10 +40,9 @@
                     Estado
                     <p-sortIcon field="firstName">
                     </p-sortIcon>
+                <th class="white-space-nowrap">
+                    Ações
                 </th>
-                <!-- <th class="white-space-nowrap" style="width:10%">
-                    Acoes
-                </th> -->
             </tr>
         </ng-template>
         <ng-template #body let-empresa>
