--- a/src/app/pages/licencas-certificados/licencas-lista/licencas-lista.component.html
+++ b/src/app/pages/licencas-certificados/licencas-lista/licencas-lista.component.html
@@ -46,9 +46,9 @@
                     <p-sortIcon field="firstName">
                     </p-sortIcon>
                 </th>
-                <!-- <th class="white-space-nowrap" style="width:10%">
-                    Acoes
-                </th> -->
+                <th class="white-space-nowrap">
+                    Ações
+                </th>
             </tr>
         </ng-template>
         <ng-template #body let-empresa>
