--- a/src/app/pages/usermanagement/userlist.html
+++ b/src/app/pages/usermanagement/userlist.html
@@ -35,8 +35,8 @@
                         style="width:10%">
                     </p-sortIcon>
                 </th>
-                <th class="white-space-nowrap" style="width:10%">
-                    Actions
+                 <th class="white-space-nowrap">
+                    Ações
                 </th>
             </tr>
         </ng-template>
