--- a/public/layout/styles/preloading.css
+++ b/public/layout/styles/preloading.css
@@ -5,20 +5,23 @@
   margin-left: -28px;
   margin-top: -28px;
 }
+
 .splash-screen .splash-loader {
   width: 40px;
   height: 40px;
   position: relative;
   transform: rotateZ(45deg);
 }
-.splash-screen .splash-loader > div {
+
+.splash-screen .splash-loader>div {
   float: left;
   width: 50%;
   height: 50%;
   position: relative;
   transform: scale(1.1);
 }
-.splash-screen .splash-loader > div:before {
+
+.splash-screen .splash-loader>div:before {
   content: "";
   position: absolute;
   top: 0;
@@ -29,36 +32,124 @@
   animation: splash-loader-anim 2.4s infinite linear both;
   transform-origin: 100% 100%;
 }
-.splash-screen .splash-loader > div.splash-cube2 {
+
+.splash-screen .splash-loader>div.splash-cube2 {
   transform: scale(1.1) rotateZ(90deg);
 }
-.splash-screen .splash-loader > div.splash-cube2:before {
+
+.splash-screen .splash-loader>div.splash-cube2:before {
   animation-delay: 0.3s;
 }
-.splash-screen .splash-loader > div.splash-cube3 {
+
+.splash-screen .splash-loader>div.splash-cube3 {
   transform: scale(1.1) rotateZ(180deg);
 }
-.splash-screen .splash-loader > div.splash-cube3:before {
+
+.splash-screen .splash-loader>div.splash-cube3:before {
   animation-delay: 0.6s;
 }
-.splash-screen .splash-loader > div.splash-cube4 {
+
+.splash-screen .splash-loader>div.splash-cube4 {
   transform: scale(1.1) rotateZ(270deg);
 }
-.splash-screen .splash-loader > div.splash-cube4:before {
+
+.splash-screen .splash-loader>div.splash-cube4:before {
   animation-delay: 0.9s;
 }
 
 @keyframes splash-loader-anim {
-  0%, 10% {
+
+  0%,
+  10% {
     transform: perspective(140px) rotateX(-180deg);
     opacity: 0;
   }
-  25%, 75% {
+
+  25%,
+  75% {
     transform: perspective(140px) rotateX(0deg);
     opacity: 1;
   }
-  90%, 100% {
+
+  90%,
+  100% {
     transform: perspective(140px) rotateY(180deg);
     opacity: 0;
+  }
+}
+
+
+.layout-preloader-container {
+  width: 100%;
+  min-height: 100%;
+  background-color: var(--primary-color);
+  position: absolute;
+}
+
+.layout-preloader-content {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -32px;
+  margin-top: -32px;
+}
+
+.layout-preloader {
+  animation: rotator 1.4s linear infinite;
+}
+
+@keyframes rotator {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(270deg);
+  }
+}
+
+.layout-preloader-path {
+  stroke-dasharray: 187;
+  stroke-dashoffset: 0;
+  transform-origin: center;
+  animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
+}
+
+@keyframes colors {
+  0% {
+    stroke: #4285F4;
+  }
+
+  25% {
+    stroke: #DE3E35;
+  }
+
+  50% {
+    stroke: #F7C223;
+  }
+
+  75% {
+    stroke: #1B9A59;
+  }
+
+  100% {
+    stroke: #4285F4;
+  }
+}
+
+@keyframes dash {
+  0% {
+    stroke-dashoffset: 187;
+  }
+
+  50% {
+    stroke-dashoffset: 93.5;
+    transform: rotate(135deg);
+  }
+
+  100% {
+    stroke-dashoffset: 187;
+    transform: rotate(450deg);
   }
 }
