--- a/src/app/pages/application-management/application-list/application-list.component.html
+++ b/src/app/pages/application-management/application-list/application-list.component.html
@@ -49,9 +49,9 @@
                     {{ candidatura.numero }}
                 </td>
                 @if (currentRole === roleAdmin) {
-                    <td>
-                        {{candidatura.empresa.nome}}
-                    </td>
+                <td>
+                    {{candidatura.empresa.nome}}
+                </td>
                 }
                 <td>
                     {{ candidatura.categoria }}
@@ -74,7 +74,7 @@
                         <div class="flex flex-col gap-1 w-[25rem]">
                             <ul class="topbar-menu active-topbar-menu z-50 rounded">
                                 <li role="menuitem" class="!m-0 !mb-4">
-                                    <a href="#">
+                                    <a [routerLink]="['/application',candidatura.tipo.toLowerCase(), candidatura.id]">
                                         <i class="pi pi-fw pi-eye mr-2"></i>
                                         <span>Detalho</span>
                                     </a>
