--- a/src/app/pages/dados-mestre/endereco/aldeia-list/aldeia-list.component.html
+++ b/src/app/pages/dados-mestre/endereco/aldeia-list/aldeia-list.component.html
@@ -1,18 +1,16 @@
 <div class="card">
-    <p-table #dt [value]="data" [paginator]="true" paginatorDropdownAppendTo="body" [rows]="50"
-        [showCurrentPageReport]="true" responsiveLayout="scroll"
-        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        [rowsPerPageOptions]="[10, 25, 50]" [globalFilterFields]="['firstName', 'role.name', 'email', 'status']">
+    <p-table #dt [value]="dataList" [loading]="dataIsFetching" responsiveLayout="scroll" [rowHover]="true"
+        [globalFilterFields]="['postoAdministrativo.nome', 'nome']">
         <ng-template #caption>
             <div class="flex flex-wrap gap-2 items-center justify-between">
-                <p-icon-field class="w-full sm:w-80 order-1 sm:order-none">
+                <p-icon-field class="order-1 sm:order-none">
                     <p-inputicon class="pi pi-search" />
-                    <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Global Search"
+                    <input pInputText type="text" (input)="onGlobalFilter(dt, $event)" placeholder="Busca global"
                         class="w-full" />
                 </p-icon-field>
-                <button pButton outlined routerLink="/empresa/create"
-                    class="w-full sm:w-auto flex-order-0 sm:flex-order-1" icon="bi bi-building-add"
-                    label="Add New"></button>
+                <p-button pButton outlined (click)="openDialogNewData(type)"
+                    class="sm:w-auto flex-order-0 sm:flex-order-1" icon="bi bi-plus-lg" label="Adicionar novo">
+                </p-button>
             </div>
         </ng-template>
         <ng-template #header>
@@ -21,46 +19,91 @@
                     <p-sortIcon field="nome">
                     </p-sortIcon>
                 </th>
-                <th class="white-space-nowrap">
+                <th pSortableColumn="suco.nome" class="white-space-nowrap">
                     Suco
+                    <p-sortIcon field="suco.nome">
+                    </p-sortIcon>
                 </th>
                 <th class="white-space-nowrap">
                     Ações
                 </th>
             </tr>
         </ng-template>
-        <ng-template #body let-empresa>
+        <ng-template #body let-item let-rowIndex="rowIndex">
             <tr>
                 <td>
-                    {{ empresa.nome }}
+                    {{ item.nome }}
                 </td>
                 <td>
-                    {{empresa.suco.nome}}
+                    {{item.suco.nome}}
                 </td>
                 <td>
-                    <p-button (click)="op.toggle($event)" icon="pi pi-ellipsis-v" [rounded]="true" [text]="true"
-                        severity="info" />
-                    <p-popover #op>
-                        <div class="flex flex-col gap-1 w-[25rem]">
-                            <ul class="topbar-menu active-topbar-menu z-50 rounded">
-                                <li role="menuitem" class="!m-0 !mb-4">
-                                    <a>
-                                        <i class="pi pi-fw pi-pencil mr-2"></i>
-                                        <span>Atualizar</span>
-                                    </a>
-                                </li>
-                                <li role="menuitem" class="!m-0">
-                                    <a href="#">
-                                        <i class="pi pi-fw pi-trash mr-2"></i>
-                                        <span>Eliminar</span>
-                                    </a>
-                                </li>
-
-                            </ul>
-                        </div>
-                    </p-popover>
+                    <p-button icon="pi pi-pencil" class="mr-2" severity="info" [rounded]="true" [outlined]="true"
+                        (click)="openDialogEditData(item, rowIndex)" />
+                    <p-button icon="pi pi-trash" severity="danger" [rounded]="true" [outlined]="true"
+                        (click)="deleteData(item.id)" />
                 </td>
             </tr>
         </ng-template>
     </p-table>
+    <p-paginator (onPageChange)="onPageChange($event)" [rows]="size" [totalRecords]="totalData"
+        [rowsPerPageOptions]="[50, 150, 250]" [showCurrentPageReport]="true" [totalRecords]="totalData"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords}" />
 </div>
+
+@if (showDialog) {
+<p-dialog #dg header="{{isNew?'New':'Edit'}} {{type|titlecase}}" [modal]="true" [position]="'top'"
+    [(visible)]="showDialog" [style]="{ 'min-width': '30rem' }">
+    <form [formGroup]="form">
+        <div class="grid grid-cols-12 gap-4">
+            <div class="mb-6 col-span-12">
+                <div class="mb-6 col-span-12">
+                    <label for="municipio" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                        Municipio
+                    </label>
+                    <p-select (onChange)="municipioSelectOnChange($event)" [appendTo]="'body'"
+                        formControlName="municipio" inputId="municipio" [options]="municipioList" optionLabel="nome"
+                        fluid [showClear]="true" placeholder="Selecione o Municipio">
+                    </p-select>
+                </div>
+                <div class="mb-6 col-span-12">
+                    <label for="posto" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                        Posto Administrativo
+                    </label>
+                    <p-select (onChange)="postoSelectOnChange($event)" [appendTo]="'body'"
+                        formControlName="postoAdministrativo" inputId="posto" [options]="postoList" optionLabel="nome"
+                        fluid [showClear]="true" placeholder="Selecione o Posto Administrativo">
+                    </p-select>
+                </div>
+                <div class="mb-6 col-span-12">
+                    <label for="suco" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                        Suco
+                    </label>
+                    <p-select [appendTo]="'body'" formControlName="suco" inputId="suco" [options]="sucoList"
+                        optionLabel="nome" fluid [showClear]="true" placeholder="Selecione o Suco">
+                    </p-select>
+                </div>
+                <label for="nome" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                    Nome
+                </label>
+                <input formControlName="nome" id="nome" type="text" pInputText fluid />
+            </div>
+            <div class="mb-6 col-span-12">
+                <p-button class="mr-4" icon="pi pi-times" label="Cancelar" variant="outlined" severity="danger"
+                    (click)="closeDialog()" />
+                @if (isNew) {
+                <p-button icon="pi pi-save" [loading]="loading" [disabled]="!form.valid" pButton pRipple
+                    (click)="saveData(form)" label="Guardar" class="w-auto mt-3"></p-button>
+                }@else {
+                <p-button icon="pi pi-sync" [loading]="loading" [disabled]="!form.valid" pButton pRipple
+                    (click)="updateData(form)" label="Atualizar" class="w-auto mt-3"></p-button>
+                }
+            </div>
+
+        </div>
+    </form>
+</p-dialog>
+}
+
+<p-toast position="bottom-right" />
+<p-confirmdialog />
