create pedido component

--- a/src/app/pages/application-management/application-detail/application-detail.component.html
+++ b/src/app/pages/application-management/application-detail/application-detail.component.html
@@ -71,193 +71,10 @@
 
              <p-step-panel [value]="2">
                  <ng-template #content let-activateCallback="activateCallback">
-                     <form [formGroup]="requestForm">
-                         <span class="text-xl font-bold mt-6 mb-3 block">
-                             PEDIDO
-                         </span>
-                         <div class="grid grid-cols-12 gap-4">
-                             <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="application"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Tipo
-                                 </label>
-                                 <p-select inputId="application" [options]="requestTypes" optionLabel="name" fluid
-                                     filterBy="name" [showClear]="true" placeholder="Select a Pedido">
-                                 </p-select>
-                             </div>
-                         </div>
-                         <span class="text-xl font-bold mt-6 mb-3 block">
-                             IDENTIFICACAO DA EMPRESA
-                         </span>
-                         <div formGroupName="empresa" class="grid grid-cols-12 gap-4">
-                             <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="nome" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Nome da Empresa
-                                 </label>
-                                 <input formControlName="nome" id="nome" type="text" pInputText fluid />
-                             </div>
-                             <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="sede" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Sede
-                                 </label>
-                                 <input formControlName="sede" id="sede" type="text" pInputText fluid />
-                             </div>
 
-                             <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="nif" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     NIF
-                                 </label>
-                                 <input formControlName="nif" id="nif" type="text" pInputText fluid />
-                             </div>
-                             <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="numeruRegisto"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Nº Registo Comercial/Industrial
-                                 </label>
-                                 <input formControlName="numeruRegisto" id="numeruRegisto" type="text" pInputText
-                                     fluid />
-                             </div>
-                             <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="telemovel"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Telemovel
-                                 </label>
-                                 <input formControlName="telemovel" id="telemovel" type="text" pInputText fluid />
-                             </div>
+                     <app-pedido-cadastro [pedidoData]="pedidoData"
+                         [empresaData]="empresaData"></app-pedido-cadastro>
 
-                             <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="telefone"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Telefone
-                                 </label>
-                                 <input formControlName="telefone" id="telefone" type="text" pInputText fluid />
-                             </div>
-                             <div class="mb-6 col-span-12">
-                                 <label for="gerente"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Gerente
-                                 </label>
-                                 <input formControlName="gerente" id="gerente" type="text" pInputText fluid />
-                             </div>
-                         </div>
-                         <span class="text-xl font-bold mt-6 mb-3 block">
-                             IDENTIFICACAO DO ESTABELECIMENTO
-                         </span>
-                         <div class="grid grid-cols-12 gap-4">
-                             <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="nomeEstabelecimento"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Nome do Estabelecimento
-                                 </label>
-                                 <input formControlName="nomeEstabelecimento" id="nomeEstabelecimento" type="text"
-                                     pInputText fluid />
-                             </div>
-                             <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="localEstabelecimento"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Local do Estabelecimento
-                                 </label>
-                                 <input formControlName="localEstabelecimento" id="localEstabelecimento" type="text"
-                                     pInputText fluid />
-                             </div>
-                             <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="tipoEstabelecimento"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Tipo do Estabelecimento
-                                 </label>
-                                 <p-select inputId="tipoEstabelecimento" [options]="estabelecimentoTypes"
-                                     optionLabel="name" fluid filterBy="name" [showClear]="true"
-                                     placeholder="Select a Tipo">
-                                 </p-select>
-                             </div>
-                             <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="caraterizacaoEstabelecimento"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Caraterizacao do Estabelecimento
-                                 </label>
-                                 <p-select inputId="caraterizacaoEstabelecimento"
-                                     [options]="caraterizacaoEstabelecimentoTypes" optionLabel="name" fluid
-                                     filterBy="name" [showClear]="true" placeholder="Select a Tipo">
-                                 </p-select>
-                             </div>
-                         </div>
-
-                         <span class="text-xl font-bold mt-6 mb-3 block">
-                             CARATERIZACAO DA ATIVIDADE
-                         </span>
-                         <div class="grid grid-cols-12 gap-4">
-                             <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="risco" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Quanto ao Risco
-                                 </label>
-                                 <p-select inputId="risco" [options]="riscoTypes" optionLabel="name" fluid
-                                     filterBy="name" [showClear]="true" placeholder="Select a Tipo">
-                                 </p-select>
-                             </div>
-                             <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="ato" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Quanto ao tipo de Ato
-                                 </label>
-                                 <p-select inputId="ato" [options]="atoTypes" optionLabel="name" fluid filterBy="name"
-                                     [showClear]="true" placeholder="Select a Tipo">
-                                 </p-select>
-                             </div>
-                             <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="tipoAtividade"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Tipo de Atividade no Estabelecimento
-                                 </label>
-                                 <input formControlName="tipoAtividade" id="tipoAtividade" type="text" pInputText
-                                     fluid />
-                             </div>
-                             <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="tipoAtividadeCodigo"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Codigo
-                                 </label>
-                                 <input formControlName="tipoAtividadeCodigo" id="tipoAtividadeCodigo" type="text"
-                                     pInputText fluid />
-                             </div>
-                             <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="atividadePrincipal"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Atividade Principal exercida no Estabelecimento
-                                 </label>
-                                 <input formControlName="atividadePrincipal" id="atividadePrincipal" type="text"
-                                     pInputText fluid />
-                             </div>
-                             <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="atividadePrincipalCodigo"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Codigo
-                                 </label>
-                                 <input formControlName="atividadePrincipalCodigo" id="atividadePrincipalCodigo"
-                                     type="text" pInputText fluid />
-                             </div>
-
-                             <div class="mb-6 col-span-12">
-                                 <label for="alteracoes"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Alteracoes a Averbar
-                                 </label>
-                                 <input formControlName="alteracoes" id="alteracoes" type="text" pInputText fluid />
-                             </div>
-                             <div class="mb-6 col-span-12 md:col-span-6">
-                                 <label for="dataEmissao"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Data da Emissao do Certificado anterior (Se Aplicavel)
-                                 </label>
-                                 <input formControlName="dataEmissao" id="dataEmissao" type="date" pInputText fluid />
-                             </div>
-                             <div class="mb-6 col-span-12">
-                                 <label for="observacao"
-                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Observacao
-                                 </label>
-                                 <input formControlName="observacao" id="observacao" type="text" pInputText fluid />
-                             </div>
-                         </div>
-                     </form>
                      <div class="flex pt-6 justify-between">
                          <p-button label="Back" severity="secondary" icon="pi pi-arrow-left"
                              (onClick)="activateCallback(1)" />
