--- a/src/app/pages/dados-mestre/lista/lista.component.html
+++ b/src/app/pages/dados-mestre/lista/lista.component.html
@@ -2,7 +2,7 @@
     <p-table #dt [value]="dataList" [paginator]="true" paginatorDropdownAppendTo="body" [rows]="50" [columns]="cols"
         [rowHover]="true" [showCurrentPageReport]="true" responsiveLayout="scroll" dataKey="id"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-        [rowsPerPageOptions]="[10, 25, 50]" [globalFilterFields]="['codigo', 'descricao', 'tipo', 'tipoRisco']">
+        [rowsPerPageOptions]="[10, 25, 50]" [globalFilterFields]="['codigo', 'descricao', 'tipo', 'tipoRisco', 'ato', 'montante']">
         <ng-template #caption>
             <div class="flex flex-wrap gap-2 items-center justify-between">
                 <p-icon-field class="order-1 sm:order-none">
@@ -33,7 +33,11 @@
                 </td>
                 @for(col of columns; track col){
                 <td>
+                    @if (col.field === 'montante') {
+                    {{item[col.field] |currency}}
+                    }@else {
                     {{item[col.field]}}
+                    }
                 </td>
                 }
                 <td>
@@ -55,14 +59,18 @@
     [(visible)]="showDialog" [style]="{ 'min-width': '30rem' }">
     <form [formGroup]="dataForm">
         <div class="grid grid-cols-12 gap-4">
-            @if (type === 'tipo-risco') {
+            @if (type === 'taxas') {
             <div class="mb-6 col-span-12">
-                <label for="tipo" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                    Risco
+                <label for="ato" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                    Ato
                 </label>
-                <p-select [appendTo]="'body'" formControlName="tipo" inputId="tipo" [options]="nivelRiscoOpts"
-                    optionLabel="name" fluid [showClear]="true" placeholder="Selecione o Nivel Risco">
-                </p-select>
+                <input formControlName="ato" id="ato" type="text" pInputText fluid />
+            </div>
+            <div class="mb-6 col-span-12">
+                <label for="montante" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                    Montante
+                </label>
+                <input formControlName="montante" id="montante" type="number" pInputText fluid />
             </div>
             }
             @else {
