--- a/src/app/pages/application-management/application-detail/application-detail.component.html
+++ b/src/app/pages/application-management/application-detail/application-detail.component.html
@@ -1,7 +1,7 @@
  <p-toast position="bottom-right" />
  <div class="card">
      <span class="text-surface-900 dark:text-surface-0 text-2xl font-bold mb-6 block">
-         Candidatura para o Pedido Inscricacao no Cadastro (Comercial / Industrial)
+         Candidatura para o Pedido Inscricacao no Cadastro {{categoria | titlecase}}
      </span>
 
      <p-stepper [value]="1" class="basis-[50rem]">
@@ -22,8 +22,12 @@
                                  </div>
                              </div>
                              <div>
-                                 <div class="text-gray-500 text-md">Certificado:</div>
+                                 <div class="text-gray-500 text-md">
+                                     Certificado:</div>
                                  <p-tag value="Pendente" [severity]="'warn'" />
+                                 <a class="ml-4" routerLink="/certificados/{{aplicanteData.id}}">
+                                     <p-tag value="Baixar" icon="pi pi-download" severity="info" />
+                                 </a>
                              </div>
                          </div>
 
@@ -45,8 +49,13 @@
                              <div class="flex justify-between mb-1 text-gray-600">
                                  <span>Formulário</span>
                                  @if (aplicanteData.pedidoInscricaoCadastroDto) {
-                                 <p-tag [value]="aplicanteData.pedidoInscricaoCadastroDto.status"
-                                     [severity]="aplicanteData.pedidoInscricaoCadastroDto.status| statusSeverity" />
+                                 <div>
+                                     <p-tag [value]="aplicanteData.pedidoInscricaoCadastroDto.status"
+                                         [severity]="aplicanteData.pedidoInscricaoCadastroDto.status| statusSeverity" />
+                                     <a class="ml-4" [routerLink]="['pedido-inscricao']">
+                                         <p-tag value="Baixar" icon="pi pi-download" severity="info" />
+                                     </a>
+                                 </div>
                                  }@else {
                                  <p-tag value="Esboco" [severity]="'info'" />
                                  }
@@ -54,9 +63,10 @@
                              </div>
                              <div class="flex justify-between text-gray-600">
                                  <span>Fatura</span>
-                                 @if (aplicanteData.pedido) {
-                                 <p-tag [value]="aplicanteData.pedidoInscricaoCadastroDto.fatura"
-                                     [severity]="aplicanteData.pedidoInscricaoCadastroDto.fatura| statusSeverity" />
+                                 @if (aplicanteData.pedidoInscricaoCadastroDto &&
+                                 aplicanteData.pedidoInscricaoCadastroDto.fatura) {
+                                 <p-tag [value]="aplicanteData.pedidoInscricaoCadastroDto.fatura.status"
+                                     [severity]="aplicanteData.pedidoInscricaoCadastroDto.fatura.status| statusSeverity" />
                                  }@else {
                                  <p-tag value="Nao Paga" [severity]="'secondary'" />
                                  }
@@ -170,7 +180,7 @@
                              <div class="mb-6 col-span-12 md:col-span-6">
                                  <label for="numeruRegisto"
                                      class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                     Nº Registo Comercial/Industrial
+                                     Nº Registo {{categoria | titlecase}}
                                  </label>
                                  <input formControlName="numeroRegistoComercial" id="numeruRegisto" type="text"
                                      pInputText fluid />
@@ -218,6 +228,7 @@
                                  <input formControlName="localEstabelecimento" id="localEstabelecimento" type="text"
                                      pInputText fluid />
                              </div>
+                             @if (categoria === 'COMERCIAL') {
                              <div class="mb-6 col-span-12 md:col-span-6">
                                  <label for="tipoEstabelecimento"
                                      class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
@@ -228,6 +239,19 @@
                                      [showClear]="true" placeholder="Selecione o Tipo de Estabelecimento">
                                  </p-select>
                              </div>
+                             }@else {
+                             <div class="mb-6 col-span-12 md:col-span-6">
+                                 <label for="tipoEmpresa"
+                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                     Tipo do Empresa
+                                 </label>
+                                 <p-select formControlName="tipoEmpresa" inputId="tipoEmpresa"
+                                     [options]="tipoEmpresaOpts" optionLabel="name" fluid filterBy="name"
+                                     [showClear]="true" placeholder="Selecione o Tipo de Empresa">
+                                 </p-select>
+                             </div>
+                             }
+
                              <div class="mb-6 col-span-12 md:col-span-6">
                                  <label for="caraterizacaoEstabelecimento"
                                      class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
@@ -254,6 +278,7 @@
                                      placeholder="Selecione o risco">
                                  </p-select>
                              </div>
+                             @if (categoria === 'COMERCIAL') {
                              <div class="mb-6 col-span-12 md:col-span-6">
                                  <label for="ato" class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
                                      Quanto ao tipo de Ato
@@ -263,6 +288,19 @@
                                      placeholder="Selecione o tipo de ato">
                                  </p-select>
                              </div>
+                             }@else {
+                             <div class="mb-6 col-span-12 md:col-span-6">
+                                 <label for="quantoAtividade"
+                                     class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
+                                     Quanto à atividade
+                                 </label>
+                                 <p-select formControlName="quantoAtividade" inputId="quantoAtividade"
+                                     [options]="quantoAtividadeOpts" optionLabel="name" fluid filterBy="name"
+                                     [showClear]="true" placeholder="Selecione a atividade">
+                                 </p-select>
+                             </div>
+                             }
+
                              <div class="mb-6 col-span-12 md:col-span-6">
                                  <label for="tipoAtividade"
                                      class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
@@ -362,16 +400,17 @@
                              </span>
                              <div class="grid grid-cols-12 gap-4">
                                  <div class="mb-6 col-span-12">
-                                     <label for="ato"
+                                     <label for="taxa"
                                          class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
                                          Selecionar o Ato
                                      </label>
-                                     <p-select inputId="ato" [options]="pedidoAto" optionLabel="name" fluid
-                                         filterBy="name" [checkmark]="true" [showClear]="true" placeholder="Selecionar">
+                                     <p-select formControlName="taxa" inputId="taxa" [options]="listaPedidoAto"
+                                         optionLabel="name" fluid filterBy="name" [checkmark]="true" [showClear]="true"
+                                         placeholder="Selecionar">
                                          <ng-template let-item #selectedItem>
                                              <div class="flex items-center gap-2">
 
-                                                 <div>{{ item.name }}</div>
+                                                 <div>{{ item.ato }}</div>
                                                  -
                                                  <div> {{item.montante |currency }} </div>
                                              </div>
@@ -379,7 +418,7 @@
                                          <ng-template let-item #item>
                                              <div class="flex items-center gap-2">
 
-                                                 <div>{{ item.name }}</div>
+                                                 <div>{{ item.ato }}</div>
                                                  -
                                                  <div> {{item.montante |currency }} </div>
                                              </div>
@@ -387,11 +426,11 @@
                                      </p-select>
                                  </div>
                                  <div class="mb-6 col-span-12 md:col-span-6">
-                                     <label for="nomeRequerente"
+                                     <label for="nomeEmpresa"
                                          class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
                                          Nome Requerente
                                      </label>
-                                     <input formControlName="nomeRequerente" id="nomeRequerente" type="text" pInputText
+                                     <input formControlName="nomeEmpresa" id="nomeEmpresa" type="text" pInputText
                                          fluid />
                                  </div>
                                  <div class="mb-6 col-span-12 md:col-span-6">
@@ -405,10 +444,20 @@
                                  <div class="mb-6 col-span-12 md:col-span-7">
                                      <label for="atividadeDeclarada"
                                          class="font-medium text-surface-900 dark:text-surface-0 mb-2 block">
-                                         Atividade Industrial declarada
+                                         Atividade {{categoria|titlecase}} declarada
                                      </label>
-                                     <input formControlName="atividadeDeclarada" id="atividadeDeclarada" type="text"
-                                         pInputText fluid />
+                                     <p-select formControlName="atividadeDeclarada"
+                                         (onChange)="atividadeDeclaradaChange($event)" inputId="atividadeDeclarada"
+                                         [options]="listaAtividadeEconomica" optionLabel="descricao" fluid
+                                         [filter]="true" filterBy="codigo,descricao" [showClear]="true"
+                                         placeholder="Selecione a atividade">
+                                         <ng-template let-tipo #item>
+                                             <div class="flex items-center gap-2">
+                                                 <span>{{tipo.codigo}} </span> - <span>{{tipo.descricao}} </span>
+                                             </div>
+                                         </ng-template>
+                                     </p-select>
+
                                  </div>
                                  <div class="mb-6 col-span-12 md:col-span-5">
                                      <label for="codigo"
@@ -421,9 +470,12 @@
                              <div class="grid grid-cols-12 gap-4">
                                  <div class="mb-6 col-span-12 md:col-span-4 flex justify-between">
                                      <p-button label="Emitir Fatura" icon="pi pi-file" iconPos="left"
-                                         class="w-auto mt-3" />
+                                         [loading]="faturaLoading" class="w-auto mt-3"
+                                         (click)="saveFatura(faturaForm)" />
+                                     @if (faturaId) {
                                      <p-button label="Baixar Fatura" [outlined]="true" icon="pi pi-download"
                                          iconPos="left" class="w-auto mt-3" />
+                                     }
                                  </div>
                              </div>
 
